# cameroon-voice-ai

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  audio.py  chat.py  health.py  voice.py
app/api/schemas/: __init__.py  requests.py  responses.py
app/api/v1/: router.py
app/clients/: __init__.py  backend_client.py
app/config/: __init__.py  prompts.py  settings.py
app/core/conversation/: __init__.py  manager.py  state.py
app/core/extraction/: __init__.py  extractors.py
app/core/intent/: __init__.py  classifier.py
app/services/backend/: __init__.py  accounts.py  client.py  models.py  transactions.py
app/services/bafoka/: __init__.py  create_account_service.py  valid_account_service.py
app/services/conversation/: __init__.py  conversation_service.py
app/services/llm/: __init__.py  openai_llm.py  prompts.py
app/services/speech/: __init__.py  stt.py  stt_service.py  tts.py  tts_service.py
app/services/storage/: __init__.py  storage_service.py
app/storage/: __init__.py  audio_storage.py  conversation_store.py
app/utils/: audio.py  lang.py  logging.py  tool_parser.py
logs/audit/: commands.jsonl  errors.jsonl  transactions.jsonl
src/: main.py  requirements.txt
src/core/: config.py  constants.py  dependencies.py  exception.py  logging.py
src/schemas/: audio.py  banking.py  botpress.py  chat.py  pipeline.py  tts.py  webhook.py
src/test/: test_whisper.py
training/synthetic/: audio_generator.py  phrase_templates.py
(+31 files in other folders)
